Bug 472080 - Poor Contrast in Accelerator Text when Menu is highlight

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -683,7 +683,6 @@ a.breadcrumb.currentLocation {
 }
 
 .dropdownMenuItem .dropdownKeyBinding {
-	color: grey !important; /* !important to override .dropdownMenuItem */
 	flex-grow: 0;
 	-webkit-flex-grow: 0;		/* Safari */
 	font-size: 11px;
